fixed h1 overflow on all screen sizes

--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -324,3 +324,7 @@
     display: flex;
     align-items: flex-end;
 }
+
+.overlay_title {
+    font-size: 42px;
+}
